fix(css): fix section overflow

--- a/css/animism.css
+++ b/css/animism.css
@@ -4,7 +4,6 @@
 .animism {
     height: 220vh;
     min-width: calc(1500px - 22rem);
-    overflow: visible;
     position: relative;
 }
 
